test/valid/fc36994_TestOverloading/TestOverloadInteger.plume
/**
 * For testing integer overloading
 * @author 36994, César Santos
 */
class TestOverloadInteger extends Object is
  method main : () -> String is
    (new CorrectOverloading()).testInteger(1,-3).toString() //expect -2