test/invalid/fc36994_TestAbstract/AbstractClass.plume
/**
 * For testing abstract extends
 * @author 36994, César Santos
 */
abstract class AbstractClass extends Object is
  abstract method nothing1 : () -> Boolean is